--- a/package.json
+++ b/package.json
@@ -33,11 +33,14 @@
         "@angular/platform-browser-dynamic": "11.2.11",
         "@angular/router": "11.2.11",
         "@ng-bootstrap/ng-bootstrap": "8.0.0",
+        "add": "^2.0.6",
+        "angular-cli-ghpages": "^1.0.0-rc.2",
         "bootstrap": "4.5.3",
         "core-js": "3.8.0",
         "express": "4.17.1",
         "gatekeeper-client-sdk": "0.0.6",
         "jquery": "^3.6.0",
+        "ng": "0.0.0",
         "ng-uikit-pro-standard": "^1.0.0",
         "ngx-toastr": "13.2.0",
         "rxjs": "6.6.7",
